<resources>
	<string name="app_name">Money Tracker</string>
	<string name="tab_title_blotter">Blotter</string>
	<string name="tab_title_accounts">Accounts</string>
	<string name="tab_title_products">Products</string>
	<string name="product_title">Product</string>
	<string name="sum_title">Sum</string>
	<string name="button_save_title">Save</string>
	<string name="button_save_and_new"><![CDATA[Save & New]]></string>
	<string name="button_cancel_title">Cancel</string>
	<string name="dialog_select_account_title">Select Account</string>
	<string name="notes_title">Notes</string>
	<string name="enter_notes_hint">enter notes</string>
	<string name="enter_product_hint">enter product</string>
	<string name="should_enter_product">You did not enter a product</string>
	<string name="should_enter_sum">You did not enter sum</string>
	<string name="spending_1s_updated">Spending %1$s updated</string>
	<string name="spending_1s_created">Spending %1$s created</string>
	<string name="confirm_delete_spending">Are you sure to delete this record?</string>
	<string name="confirm_dialog_title">Really?</string>
</resources>
