<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
					 xmlns:tools="http://schemas.android.com/tools"
					 android:layout_width="match_parent"
					 android:layout_height="match_parent"
	>

	<LinearLayout
		android:id="@+id/bottom_toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:padding="5dp"
		>

		<Button
			android:id="@+id/button_cancel"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/button_cancel_title"/>
		<Button
			android:id="@+id/button_save"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/button_save_title"/>
		<Button
			android:id="@+id/button_save_and_new"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/button_save_and_new"/>
	</LinearLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@id/bottom_toolbar"
		android:layout_alignParentTop="true"
		android:layout_weight="1"
		>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="5dp">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<Button
					android:id="@+id/button_date"
					tools:text="Sep 1. 2016"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<Button
					android:id="@+id/button_time"
					tools:text="15:27"
					android:layout_weight="1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<Button
					android:id="@+id/button_account"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					tools:text="account name"
					/>
			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:layout_marginBottom="5dp"
				android:layout_marginTop="5dp"
				android:background="@color/splitterColor"
				/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/product_title"
				/>

			<AutoCompleteTextView
				android:id="@+id/product"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:maxLines="1"
				android:imeOptions="actionNext"
				android:nextFocusDown="@+id/sum_big"
				android:hint="@string/enter_product_hint"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/sum_title"
					android:layout_gravity="center_vertical"
					/>

				<EditText
					android:id="@+id/sum_big"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:inputType="number"
					android:imeOptions="actionNext"
					android:nextFocusDown="@+id/sum_small"
					android:ems="5"
					android:maxLength="7"
					tools:text="150"
					android:gravity="center"
					/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="."
					android:textStyle="bold"
					android:layout_gravity="center_vertical"
					/>

				<EditText
					android:id="@+id/sum_small"
					android:layout_width="wrap_content"
					android:inputType="number"
					android:imeOptions="actionNext"
					android:nextFocusDown="@+id/notes"
					android:ems="2"
					android:maxLength="2"
					android:gravity="center"
					tools:text="50"
					android:layout_height="wrap_content"/>


			</LinearLayout>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/notes_title"
				/>

			<EditText
				android:id="@+id/notes"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:maxLines="1"
				android:imeOptions="actionNext"
				android:nextFocusDown="@id/product"
				android:hint="@string/enter_notes_hint"/>

		</LinearLayout>
	</ScrollView>

</RelativeLayout>